[package]
name = "server_rust_reel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
tonic = { version = "0.10.2" }
tonic-web = "0.10.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.12"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
tower-http = { version = "0.4.4", default-features = false, features = [
    "cors",
] }
[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "server"
path = "./src/server/server.rs"
