[package]
name = "wasm-app"
version = "0.1.0"
authors = ["lnxdxtf <gabrielramosmichaliszen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

tonic-web-wasm-client = "0.5.0"
tonic = { version = "0.10.2", default-features = false, features = [
    "prost",
    "codegen",
] }
prost = "0.12"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

wasm-bindgen-futures = "0.4.37"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# Tell `rustc` to optimize for small code size.
[build-dependencies]
tonic-build = { version = "0.10.2", default-features = false, features = [
    "prost",
] }

[profile.release]
opt-level = "s"
